creation of bio page

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -18,5 +18,11 @@
         <p>Bootstrap makes websites responsive, so they look good
         on devices of all sizes</p>
         <a href="homepage.html"><button>Back to home page</button></a>
+        
+        <ol>
+            <li>Tea</li>
+            <li>Coffee</li>
+            <li></li>
+        </ol>
     </body>
 </htm>
