--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,7 @@
        <h5>I don't know why you would use a header this small</h5>
        <h6>This is the smallest header</h6>
        <a href="bootstrap.html"><button>Bootstrap page</button></a>
+       <a href="bio.html"><button>Bio page</button></a>
     </body>
     
 </hmtl>
